--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,8 @@ flex;    justify-content: center;
     align-items: center;
 }
 div{color : #333; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+text-align:midle;}
+p{color: #3b64a1bd; font-size: 18px;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 text-align: center;}
+
