--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 body{ font-family: Arial, Helvetica, sans-serif;
+    background-color: #0da6cc;
     color: #3b64a1bd;
     display: 
 flex;    justify-content: center;
     align-items: center;
 }
 div{color : #333; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-text-align:midle;}
+text-align: center;}
+
 p{color: #3b64a1bd; font-size: 18px;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 text-align: center;}
-
+h1.1{color: #000; font-size: 24px;font  -family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
