--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{ font-family: Arial, Helvetica, sans-serif;
-    background-color: #0da6cc;
+    background-color: #5d7175;
     color: #3b64a1bd;
     display: 
 flex;    justify-content: center;
@@ -8,7 +8,7 @@ flex;    justify-content: center;
 div{color : #333; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 text-align: center;}
 
-p{color: #3b64a1bd; font-size: 18px;
+p{color: #c0d9ffbd; font-size: 18px;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 text-align: center;}
-h1.1{color: #000; font-size: 24px;font  -family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+h1{color: #000; font-size: 24px;font  -family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
